# sagent

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  demo.py  harness_build_plan.md  index.html  pendo-setup.js  pyproject.toml  repl.py  repl_tui.py  requirements.txt  sagent  sagent_cli.py
.github/workflows/: ci.yml
harness/: __init__.py  client.py  context.py  harness.py  memory.py  pendo.py  session.py  utils.py
tests/: conftest.py  test_cli.py  test_harness.py  test_integration.py  test_pendo.py  test_repl.py  test_repl_tui.py
